# ecg

./: README.md  ecg.cabal
src/: ArithmeticSite.hs  ECGroup.hs  ECGroupUtil.hs  Functions.hs  Util.hs  Zquot.hs  ZquotUtil.hs
test/: Test.hs  TestECGroup.hs  TestECGroupUtil.hs  TestZquot.hs  TestZquotUtil.hs
